# RMGApplications

./: .gitignore  README.md
01-FullCosmogenics/: CMakeLists.txt  CustomIsotopeFilter.cc  CustomIsotopeFilter.hh  Deadtime.mac  HardwareQEOverride.cc  HardwareQEOverride.hh  README.md  RestoreSeeds.sh  RestoreSeeds_IsotopeOutput.sh  Speedrun.sh  main.cc  rerun.mac  run.mac  runGeDepositions.mac
01-FullCosmogenics/datasheets/: R7081_QEWhitespace.csv
01-FullCosmogenics/docs/: Rerun.md
01-FullCosmogenics/gdml/: L1000V0.gdml
01-FullCosmogenics/include/: CosmogenicOutputScheme.hh  CustomIsotopeFilter.hh  CustomMUSUNGenerator.hh  HardwareQEOverride.hh  IsotopeOutputScheme.hh  RNGCerenkov.hh  RNGTrackingAction.hh
01-FullCosmogenics/src/: CosmogenicOutputScheme.cc  CosmogenicPhysics.cc  CustomIsotopeFilter.cc  CustomMUSUNGenerator.cc  IsotopeOutputScheme.cc  RNGCerenkov.cc  RNGTrackingAction.cc
02-TestIsotopeFilter/: CMakeLists.txt  HPGeTestStand.cc  main.cc  run.mac  vis-traj.mac
03-TestNeutronCapture/: CMakeLists.txt  HPGeTestStand.cc  HPGeTestStand.hh  IsotopeOutputScheme.cc  IsotopeOutputScheme.hh  README.md  RestoreSeedRun.mac  RestoreSeeds.sh  currentEvent.rndm  currentRun.rndm  main.cc  runNormalnCapture.mac  runRMGnCapture.mac  testrun.mac
03-TestNeutronCapture/GammaCascades/: 156Gd-100Entries.txt  (+1 more)
04-TestDistance/: CMakeLists.txt  HPGeTestStand.cc  main.cc  output_nt_det001.csv  output_nt_vertices.csv  run.mac  run2.mac  run3.mac  vis.mac
04-TestDistance/gdml/: Detector80.gdml  SubtractionDetector.gdml
05-NavBench/: .gitignore  gun.mac  run.mac  vis.mac
